[gd_scene load_steps=3 format=3 uid="uid://c280vvvxte3nh"]

[ext_resource type="Script" uid="uid://dwbgmpky5m2jn" path="res://experiments/skill_system_demo/scripts/skill_demo_view.gd" id="1_gvlty"]
[ext_resource type="Theme" uid="uid://d1stc5w463lhk" path="res://themes/battle_ui_theme.tres" id="2_4lccj"]

[node name="SkillView" type="HBoxContainer"]
script = ExtResource("1_gvlty")

[node name="SkillName" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_4lccj")
theme_override_font_sizes/font_size = 18
text = "thorny defense"

[node name="SkillCost" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_4lccj")
theme_override_font_sizes/font_size = 18
text = "10"

[node name="CastButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_4lccj")
theme_override_font_sizes/font_size = 18
text = "Cast"
